# TheDreamMachine

./: CMakeLists.txt  README.txt
src/: CMakeLists.txt  bvh.h  bvh_median.c  intr.h  intr_bvh.c  linalg.inl  mem.c  mem.h  shader.h  view.h
src/generic/: bvh.c  intr_box.c  intr_frustum.c  intr_tri.c  shader.c  view.c
src/x86/: bvh.c  intr_box.c  intr_frustum.c  intr_tri.c  shader.c  shader_utils.inl  view.c  x86.inl
test/: CMakeLists.txt  bvh_test.c  intr_box_bench.c  intr_box_test.c  intr_bvh_test.c  intr_frustum_test.c  intr_tri_bench.c  intr_tri_test.c  model.h  obj_loader.c  obj_loader.h  scale_obj.c  tga_loader.c  tga_loader.h  view_test.c  viewer.c
